# jolt-determinism-spike

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Layers.h
src/: main.cpp
